<resources>
    <string name="app_name">tid-bma</string>
    <string name="blacklist">Blacklist</string>
    <string name="add_apps">Add Apps</string>
    <string name="blocked_app">Blocked Apps</string>
    <string name="start_session_bar">Start Session</string>
    <string name="timer_bar">Timer</string>
    <string name="blacklist_bar">Blacklist</string>
    <string name="start_sessi">Start Session</string>
    <string name="exercise_pr">\n    Exercise provider</string>
</resources>
