<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backscreen">

    <!-- Currently blocked apps -->
    <TextView
            android:id="@+id/blacklist"
            android:layout_width="95.64dp"
            android:layout_height="33.6dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="117dp"
            android:layout_marginBottom="80dp"
            android:gravity="top"
            android:text="@string/blacklist"
            android:textAppearance="@style/blacklist"
            app:layout_constraintBottom_toTopOf="@+id/blocked_apps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.202"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    <Button
            android:id="@+id/blocked_apps"
            android:layout_width="280dp"
            android:layout_height="44dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="65dp"
            android:layout_marginTop="187dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="500dp"
            android:background="#00000000"
            android:text="@string/blocked_app"
            android:textAppearance="@style/blocked_apps"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <!-- Add apps to be blocked -->
    <android.support.v7.widget.RecyclerView
            android:id="@+id/list_of_blocked_apps"
            android:layout_width="282dp"
            android:layout_height="106dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blocked_apps" />

    <Button
            android:id="@+id/add_apps"
            android:layout_width="280dp"
            android:layout_height="44dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="225dp"
            android:background="#00000000"
            android:text="@string/add_apps"
            android:textAppearance="@style/add_apps"
            app:layout_constraintBottom_toTopOf="@+id/timer_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blocked_apps"
            app:layout_constraintVertical_bias="0.0" />

    <!-- Add apps to be blocked -->
    <android.support.v7.widget.RecyclerView
            android:id="@+id/list_of_apps"
            android:layout_width="280dp"
            android:layout_height="100dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_apps" />


    <!-- Start Session_bar -->
    <TextView
            android:id="@+id/start_session_bar"
            android:layout_width="80.13dp"
            android:layout_height="17.06dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="28dp"
            android:gravity="top"
            android:text="@string/start_session_bar"
            android:textAppearance="@style/start_session_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <!-- Timer_bar -->
    <TextView
            android:id="@+id/timer_bar"
            android:layout_width="47.56dp"
            android:layout_height="17.06dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="28dp"
            android:gravity="top"
            android:text="@string/timer_bar"
            android:textAppearance="@style/timer_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/blacklist_bar"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/start_session_bar" />

    <!-- Blacklist_bar -->
    <TextView
            android:id="@+id/blacklist_bar"
            android:layout_width="62dp"
            android:layout_height="17dp"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="28dp"
            android:gravity="top"
            android:text="@string/blacklist_bar"
            android:textAppearance="@style/blacklist_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>